cmake_minimum_required(VERSION 3.24)

###############################################################################
# Project                                                                     
###############################################################################

if (WIN32)
    set(CMAKE_INSTALL_PREFIX "c:/Program Files")
endif (WIN32)

project(DdsTopics VERSION "0.0.1" LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(VERSION_DDS "2.7.0")

###############################################################################
# Create library and Installing
###############################################################################

add_subdirectory(src)

###############################################################################
# Testing
###############################################################################



###############################################################################
# Examples
###############################################################################



###############################################################################
# Execute
###############################################################################



